@@ -1,3 +1,7 @@
+6 May 2000
+
+- Added FAQ to distribution
+
 30 Apr 2000
 
 - Fixed problems with overzealousness of correct_width attribute for
